--- a/static/style/flight.css
+++ b/static/style/flight.css
@@ -1,4 +1,4 @@
-.f {
+/* .f {
     text-align: center;
 }
 
@@ -21,4 +21,90 @@ form input {
 
 form input[type="submit"]:hover {
     scale: 1.05;
+} */
+
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f4f4f4;
 }
+
+
+.flight-info {
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    max-width: 600px;
+    margin: 2em auto;
+    padding: 2em;
+    padding-top: 25px;
+}
+
+.flight-info h1 {
+    color: #333;
+    text-align: center;
+    margin-bottom: 1em;
+}
+
+.info-section h2 {
+    font-size: 18px;
+    color: #555;
+    margin: 0.5em 0;
+    display: flex;
+    align-items: center;
+}
+
+.info-section h2 i {
+    margin-right: 10px;
+    color: #007BFF;
+}
+
+.admin-actions {
+    margin: 1em 0;
+    text-align: center;
+}
+
+form {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    /* justify-content: space-around; */
+    margin: 1em 0;
+}
+
+form input, form label {
+    font-size: 20px;
+    margin: 0.5em 0;
+    padding: 7px;
+}
+
+form input[type="submit"] {
+    margin-left: 20px;
+    background-color: #007BFF;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 23px;
+    transition: background-color 0.3s ease;
+}
+
+form input[type="number"] {
+    font-size: 17px;
+    border-radius: 5px;
+    width: 50px;
+    text-align: center;
+}
+
+#delay {
+    width: 72px;
+}
+
+
+form input[type="submit"]:hover {
+    background-color: #0056b3;
+}
+
+
+
