--- a/static/style/flights.css
+++ b/static/style/flights.css
@@ -2,3 +2,11 @@
     width: 100% !important;
     background-size: cover !important;
 }
+
+.upcoming > h1 {
+    padding-top: 0;
+}
+
+.upcoming {
+    padding-top: 0;
+}
