--- a/templates/flights.html
+++ b/templates/flights.html
@@ -10,7 +10,7 @@
     
     <link rel="stylesheet" href="/main.css">
     <link rel="stylesheet" href="/flights.css">
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="/main.js"></script> 
     
 </head>
@@ -23,7 +23,7 @@
 <section id="content">
   
     <div class="upcoming">
-      <h1><%=user.username%> <%= flights.length %> flights found</h1>
+      <h1><%=user.username%>,  <%= flights.length %> flights found</h1>
       <div class="flex-flights">
         <% flights.forEach(flight=> { 
           var start_date = new Date(flight.departure_time);
@@ -40,8 +40,8 @@
           <div class="flight">
               <h3><%=flight.dep_city%> -> <%=flight.target_city%></h3>
           </div>
-          <h3><%=date_str%></h3>
-          <h3><%-end_str%></h3>
+          <h3><i class="fas fa-plane-departure"></i>  <%=date_str%></h3>
+          <h3><i class="fas fa-plane-arrival"></i>  <%-end_str%></h3>
           <h3>Price: <%= flight.price %>$</h3>
         </button>
         <% }); %>
