--- a/templates/home.html
+++ b/templates/home.html
@@ -13,6 +13,16 @@
     <link rel="stylesheet" href="/main.css">
     
     <script src="/main.js"></script> 
+
+    <style>
+      .main-head {display: block;}
+      #content {margin-top: 130px;}
+      @media screen and (max-width: 800px) {
+        section#content {
+            margin-top: 0;
+        }
+      }
+    </style>
     
 </head>
 
