--- a/static/style/flight.css
+++ b/static/style/flight.css
@@ -37,6 +37,7 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     max-width: 600px;
     margin: 2em auto;
+    margin-top: 20px;
     padding: 2em;
     padding-top: 25px;
 }
