--- a/static/style/main.css
+++ b/static/style/main.css
@@ -5,7 +5,7 @@
 section#content {
     /* background-color: #eff5fb; */
     /*background: linear-gradient(to bottom, #f5f5f5, #e0e0e0);*/
-    padding-top: 180px;
+    padding-top: 70px;
 }
 
 .flights-show {
@@ -84,12 +84,13 @@ section#content {
   font-size: 40px;
   color: blueviolet;
   text-align: center;
-  padding-top: 25px;
+  /* padding-top: 25px; */
   padding-bottom: 20px;
 }
 
 
 .upcoming {
+  margin-top: 30px;
   padding-top: 30px;
   padding-bottom: 30px;
 }
