--- a/static/style/nav.css
+++ b/static/style/nav.css
@@ -276,6 +276,7 @@ hr {
 .main-head {
     /*background-image: url("/static/img/flight-bg2.jpg");*/
     background-color: rgba(153, 78, 204, 0.8);
+    display: none;
     /*background: linear-gradient(rgba(153, 78, 204, 0.8), rgba(62, 24, 122, 0.7));
     /*height: 100px;*/
 }
